--- a/catalogue.css
+++ b/catalogue.css
@@ -9,13 +9,22 @@
 	left: 0px;
 	
 }
+hr{
+  margin-right : 150px;
+  margin-left : 150px;
+  border:0;
+  background-color: #FF1493;
+  height: 1px;
+
+
+}
 h1{
 
 	color: #FF1493;
 }
 #nav{
-	;
 	
+;	
 	
 }
 a:link{
