--- a/c.css
+++ b/c.css
@@ -1,5 +1,5 @@
 .head{
-background:url("pink2.gif");
+background:url("./resources/pink2.gif");
 background-repeat: repeat;
 width: 100%;
 height: 100px;
@@ -23,11 +23,6 @@ h1{
 
 
 html,body{
-	/*background-image: url(candy3.jpg.svg);
-	background-repeat: no-repeat;*/
 	padding:0;
     margin:0;
-    /*width:100%;
-    background-size: cover;
-	position: bottom;*/
 }
