--- a/registration.css
+++ b/registration.css
@@ -9,20 +9,23 @@ h1{
 	font-family: 'Open Sans Condensed', sans-serif; 
 	font-size: 135px;
 	margin-left: 21%;
+	position: relative;
 }
 table{
 	text-align: right;
 	font-family: 'Open Sans Condensed', sans-serif; 
-	font-size: 28px;
+	font-size: 25px;
 	font-color: #fff;
 	margin-top: -6%; 
 	margin-left: 25%;
+	position: relative;
 
 }
 input{
 	text-align: center;
 	font-family: 'Open Sans Condensed', sans-serif; 
-	font-size: 20px;
+	font-size: 18px;
+	position: relative;
 }
 
 	
