--- a/login.css
+++ b/login.css
@@ -10,16 +10,19 @@ h1{
 	font-size: 140px;
 	margin-top:4%;
 	margin-left: 23%;
+	position: relative;
 }
 form{
 	text-align: center;
 	font-family: 'Open Sans Condensed', sans-serif; 
-	font-size: 28px;
+	font-size: 25px;
 	margin-top:-6%;
-	margin-left: -28%;
+	margin-left: -25%;
+	position: relative;
 }
 input{
 	text-align: center;
 	font-family: 'Open Sans Condensed', sans-serif; 
-	font-size: 20px;
+	font-size: 18px;
+	position: relative;
 }
