--- a/catalogue.css
+++ b/catalogue.css
@@ -1,13 +1,13 @@
 .head{
-	background:url("candykingdom3.jpg");
+	background:url("./pic_temp/catban.jpg");
 	background-repeat: no-repeat;
+	background-position: relative;
 	width: 100%;
-	height: 100px;
-	position: relative;
+	height: 240px;
 	top: 0px;
 	right: 0px;
 	left: 0px;
-	
+	background-size: 100% 90%;
 }
 hr{
   margin-right : 150px;
@@ -19,12 +19,16 @@ hr{
 
 }
 h1{
+	color: #000;
+	font-family: 'Mystery Quest', cursive;
+	font-size: 80px;
+	margin-top: -155px;
 
-	color: #FF1493;
 }
 #nav{
-	
-;	
+	margin-top: -20px;
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 22px;		
 	
 }
 a:link{
