--- a/login.css
+++ b/login.css
@@ -8,21 +8,38 @@ h1{
 	text-align: left;
 	font-family: 'Open Sans Condensed', sans-serif; 
 	font-size: 140px;
-	margin-top:4%;
+	margin-top:2%;
 	margin-left: 23%;
-	position: relative;
 }
 form{
 	text-align: center;
 	font-family: 'Open Sans Condensed', sans-serif; 
-	font-size: 25px;
+	font-size: 22px;
 	margin-top:-6%;
-	margin-left: -25%;
-	position: relative;
+	margin-left: -29%;
 }
 input{
 	text-align: center;
 	font-family: 'Open Sans Condensed', sans-serif; 
 	font-size: 18px;
-	position: relative;
+}
+#home{
+	text-align: right;
+	font-family: 'Open Sans Condensed', sans-serif; 
+	font-size: 18px;
+}
+#user{
+	text-align: left;
+	font-family: 'Open Sans Condensed', sans-serif; 
+	font-size: 18px;
+	margin-top: 0.5%;
+	margin-left: 33.8%;
+}
+a:link{
+	text-decoration: none;
+	color: #000;
+}
+a:visited{
+	text-decoration: none;
+	color: #000;
 }
