--- a/registration.css
+++ b/registration.css
@@ -8,25 +8,34 @@ h1{
 	text-align: left;
 	font-family: 'Open Sans Condensed', sans-serif; 
 	font-size: 135px;
+	margin-top: 2%;
 	margin-left: 21%;
-	position: relative;
 }
 table{
 	text-align: right;
 	font-family: 'Open Sans Condensed', sans-serif; 
-	font-size: 25px;
+	font-size: 22px;
 	font-color: #fff;
 	margin-top: -6%; 
 	margin-left: 25%;
-	position: relative;
-
 }
 input{
 	text-align: center;
 	font-family: 'Open Sans Condensed', sans-serif; 
 	font-size: 18px;
-	position: relative;
 }
+#home{
+	text-align: right;
+	font-family: 'Open Sans Condensed', sans-serif; 
+	font-size: 18px;
 
+}a:link{
+	text-decoration: none;
+	color: #000;
+}
+a:visited{
+	text-decoration: none;
+	color: #000;
+}
 	
 
