--- a/c.css
+++ b/c.css
@@ -1,12 +1,25 @@
 .head{
-background:url("./resources/pink2.gif");
-background-repeat: repeat;
+background:url("./pic_temp/catban.jpg");
+background-repeat:no-repeat;
+background-position: relative;
 width: 100%;
-height: 100px;
-position: relative;
+height: 240px;
 top: 0px;
 right: 0px;
 left: 0px;
+background-size: 100% 90%;
+}
+hr{
+  margin-right : 150px;
+  margin-left : 150px;
+  border:0;
+  background-color: #FF1493;
+  height: 1px;
+}
+#nav{
+	margin-top: -20px;
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 22px;			
 }
 a:link{
 text-decoration: none;
@@ -17,12 +30,16 @@ text-decoration: none;
 color: #FF1493;
 }
 h1{
-	color:#FF1493;
-	background-color:white;
+	color: #000;
+	font-family: 'Mystery Quest', cursive;
+	font-size: 80px;
+	margin-top: -155px;
 }
 
 
 html,body{
 	padding:0;
     margin:0;
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 30px;
 }
