--- a/catalogue.css
+++ b/catalogue.css
@@ -15,8 +15,6 @@ hr{
   border:0;
   background-color: #FF1493;
   height: 1px;
-
-
 }
 h1{
 	color: #000;
@@ -24,6 +22,16 @@ h1{
 	font-size: 80px;
 	margin-top: -155px;
 
+}
+table{
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 18px;
+	margin-left: 34%;
+}
+input{
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-size: 18px;
+	margin-left: 48%;
 }
 #nav{
 	margin-top: -20px;
@@ -41,3 +49,10 @@ a:visited{
 	text-decoration: none;
 	color: #FF1493;
 }
+html,body{
+	padding:0;
+    margin:0;
+    background-color: #f3f1ee;
+}
+
+
