login/signup integrated

--- a/css/catalogue.css
+++ b/css/catalogue.css
@@ -1,5 +1,5 @@
 .head{
-	background:url("./pic_temp/catban.jpg");
+	background:url("../resources/catban.jpg");
 	background-repeat: no-repeat;
 	background-position: relative;
 	width: 100%;
