--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,5 @@
 .head{
-background:url("./pic_temp/catban.jpg");
+background:url("/home/2014/tyi/public_html/resources/catban.jpg");
 background-repeat:no-repeat;
 background-position: relative;
 width: 100%;
