--- a/css/registration.css
+++ b/css/registration.css
@@ -1,22 +1,23 @@
 body{
-	background-image: url("./pic_temp/loginpagewall.jpg");
+	background-image: url("../resources/CL1.jpg");
 	background-repeat: no-repeat;
 	background-attachment: fixed;
-	background-size:  110% 100%;
+	background-size: 105% 100%;	
 }
 h1{
 	text-align: left;
 	font-family: 'Open Sans Condensed', sans-serif; 
-	font-size: 140px;
-	margin-top:2%;
-	margin-left: 23%;
+	font-size: 135px;
+	margin-top: 2%;
+	margin-left: 21%;
 }
-form{
-	text-align: center;
+table{
+	text-align: right;
 	font-family: 'Open Sans Condensed', sans-serif; 
 	font-size: 22px;
-	margin-top:-6%;
-	margin-left: -29%;
+	font-color: #fff;
+	margin-top: -6%; 
+	margin-left: 25%;
 }
 input{
 	text-align: center;
@@ -27,15 +28,8 @@ input{
 	text-align: right;
 	font-family: 'Open Sans Condensed', sans-serif; 
 	font-size: 18px;
-}
-#user{
-	text-align: left;
-	font-family: 'Open Sans Condensed', sans-serif; 
-	font-size: 18px;
-	margin-top: 0.5%;
-	margin-left: 33.8%;
-}
-a:link{
+
+}a:link{
 	text-decoration: none;
 	color: #000;
 }
@@ -43,3 +37,5 @@ a:visited{
 	text-decoration: none;
 	color: #000;
 }
+	
+
